<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.EditFragment"
    android:id="@+id/constraintLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:transitionGroup="true"
    app:layoutDescription="@xml/fragment_edit_xml_constraintlayout2_scene">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutAddImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutTitle"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutTitle"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/note" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutAddImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutTitle"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutTitle"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/gallery"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ibEdit"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/change_image"
            android:src="@drawable/edit"
            app:layout_constraintEnd_toEndOf="@+id/ivImage"
            app:layout_constraintTop_toTopOf="@+id/ivImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbAddImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/add_image"
        android:focusable="true"
        android:src="@drawable/gallery"
        app:layout_constraintStart_toStartOf="@+id/fbSave"
        tools:layout_editor_absoluteY="587dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/save_note"
        android:focusable="true"
        android:src="@drawable/save"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutContent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayoutContent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fbDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/delete_image"
        android:focusable="true"
        android:src="@drawable/delete"
        app:layout_constraintBottom_toTopOf="@+id/fbSave"
        app:layout_constraintStart_toStartOf="@+id/fbSave" />

</androidx.constraintlayout.motion.widget.MotionLayout>